Added config for routing URLs

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -25,5 +25,26 @@
         }
       }
     ]
+  },
+  "Routes": {
+    "StubbedRoutes": [
+      {
+        "Path": "alvs-apaffs",
+        "Url": "http://localhost:3092/",
+        "ContentType": "application/soap+xml"
+      },
+      {
+        "Path": "cds",
+        "Url": "http://localhost:3092/",
+        "ContentType": "application/soap+xml"
+      },
+      {
+        "Path": "alvs-cds",
+        "Url": "http://localhost:3092/",
+        "ContentType": "application/soap+xml"
+      }
+    ],
+    "RealRoutes": {
+    }
   }
 }
