--- a/CdmsGateway/Properties/launchSettings.json
+++ b/CdmsGateway/Properties/launchSettings.json
@@ -4,9 +4,10 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:3091",
+      "applicationUrl": "https://cdms-gateway.localtest.me:3091",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DMP_ENVIRONMENT": "dev"
       }
     }
   }
