--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -30,17 +30,17 @@
     "StubbedRoutes": [
       {
         "Path": "alvs-apaffs",
-        "Url": "http://localhost:3092/",
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/",
         "ContentType": "application/soap+xml"
       },
       {
         "Path": "cds",
-        "Url": "http://localhost:3092/",
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/",
         "ContentType": "application/soap+xml"
       },
       {
         "Path": "alvs-cds",
-        "Url": "http://localhost:3092/",
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/",
         "ContentType": "application/soap+xml"
       }
     ],
