Added test endpoint

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -42,6 +42,11 @@
         "Path": "alvs-cds",
         "Url": "http://cdms-gateway-stub.localtest.me:3092/",
         "ContentType": "application/soap+xml"
+      },
+      {
+        "Path": "test",
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/",
+        "ContentType": "application/soap+xml"
       }
     ],
     "RealRoutes": {
