--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -27,29 +27,17 @@
     ]
   },
   "Routes": {
-    "StubbedRoutes": [
+    "StubUrl": "http://cdms-gateway-stub.localtest.me:3092/",
+    "RealRoutes": [
       {
-        "Path": "alvs-apaffs",
-        "Url": "http://cdms-gateway-stub.localtest.me:3092/",
-        "ContentType": "application/soap+xml"
+        "Path": "alvs-apaffs"
       },
       {
-        "Path": "cds",
-        "Url": "http://cdms-gateway-stub.localtest.me:3092/",
-        "ContentType": "application/soap+xml"
+        "Path": "cds"
       },
       {
-        "Path": "alvs-cds",
-        "Url": "http://cdms-gateway-stub.localtest.me:3092/",
-        "ContentType": "application/soap+xml"
-      },
-      {
-        "Path": "test",
-        "Url": "http://cdms-gateway-stub.localtest.me:3092/",
-        "ContentType": "application/soap+xml"
+        "Path": "alvs-cds"
       }
-    ],
-    "RealRoutes": {
-    }
+    ]
   }
 }
