Changed route config and routing to support indicated legacy, new or real routes

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -28,7 +28,7 @@
   },
   "Routes": {
     "StubUrl": "http://cdms-gateway-stub.localtest.me:3092/",
-    "RealRoutes": [
+    "Routes": [
       {
         "Path": "alvs-apaffs"
       },
