Support full paths for routing

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -30,13 +30,13 @@
     "StubUrl": "http://cdms-gateway-stub.localtest.me:3092/",
     "Routes": [
       {
-        "Path": "alvs-apaffs"
+        "Name": "alvs-apaffs"
       },
       {
-        "Path": "cds"
+        "Name": "cds"
       },
       {
-        "Path": "alvs-cds"
+        "Name": "alvs-cds"
       }
     ]
   }
