Initial gateway implementation for create clearance request

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -33,7 +33,9 @@
         "Name": "alvs-apaffs"
       },
       {
-        "Name": "cds"
+        "Name": "cds",
+        "SelectedRoute": "Legacy",
+        "LegacyUrl": "http://tdm-prototype-backend.localtest.me:3080/simulator/legacy"
       },
       {
         "Name": "alvs-cds"
