--- a/CdmsGateway/Properties/launchSettings.json
+++ b/CdmsGateway/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://cdms-gateway.localtest.me:3091",
+      "applicationUrl": "http://cdms-gateway.localtest.me:3091",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DMP_ENVIRONMENT": "dev"
