Removed tdm routing from commited routing

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -33,9 +33,7 @@
         "Name": "alvs-apaffs"
       },
       {
-        "Name": "cds",
-        "SelectedRoute": "Legacy",
-        "LegacyUrl": "http://tdm-prototype-backend.localtest.me:3080/simulator/legacy"
+        "Name": "cds"
       },
       {
         "Name": "alvs-cds"
