Fixed bad spelling

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -30,7 +30,7 @@
     "StubUrl": "http://cdms-gateway-stub.localtest.me:3092/",
     "Routes": [
       {
-        "Name": "alvs-apaffs"
+        "Name": "alvs-ipaffs"
       },
       {
         "Name": "cds"
