--- a/CdmsGateway/appsettings.Development.json
+++ b/CdmsGateway/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
-  "OTEL_SERVICE_NAME": "Cdms-Gatway",
+  "OTEL_SERVICE_NAME": "Cdms-Gateway",
   "Mongo": {
     "DatabaseUri": "mongodb://127.0.0.1:27017",
     "DatabaseName": "cdms-gateway"
