Updates to OTEL

--- a/CdmsGateway/Properties/launchSettings.json
+++ b/CdmsGateway/Properties/launchSettings.json
@@ -7,7 +7,9 @@
       "applicationUrl": "http://cdms-gateway.localtest.me:3091",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DMP_ENVIRONMENT": "dev"
+        "DMP_ENVIRONMENT": "dev",
+        "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:18889",
+        "OTEL_SERVICE_NAME": "cdms-gateway"
       }
     }
   }
