Changed config structure to support forking of routing

--- a/CdmsGateway/appsettings.Development.json
+++ b/CdmsGateway/appsettings.Development.json
@@ -28,5 +28,34 @@
         }
       }
     ]
+  },
+  "Routing": {
+    "AdditionalRoutes": [
+      {
+        "Name": "simulator-alvs-ipaffs",
+        "RoutedUrlName": "TdmSimulator",
+        "UnreturnedUrlName": "Stub"
+      },
+      {
+        "Name": "simulator-cds",
+        "RoutedUrlName": "TdmSimulator",
+        "UnreturnedUrlName": "Stub"
+      },
+      {
+        "Name": "simulator-alvs-cds",
+        "RoutedUrlName": "TdmSimulator",
+        "UnreturnedUrlName": "Stub"
+      }
+    ],
+    "NamedUrls": [
+      {
+        "Name": "Stub",
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/"
+      },
+      {
+        "Name": "TdmSimulator",
+        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/tdm"
+      }
+    ]
   }
 }
