--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -26,17 +26,37 @@
       }
     ]
   },
-  "Routes": {
-    "StubUrl": "http://cdms-gateway-stub.localtest.me:3092/",
+  "Routing": {
     "Routes": [
       {
-        "Name": "alvs-ipaffs"
+        "Name": "alvs-ipaffs",
+        "RoutedUrlName": "Stub",
+        "UnreturnedUrlName": "Stub"
       },
       {
-        "Name": "cds"
+        "Name": "cds",
+        "RoutedUrlName": "Stub",
+        "UnreturnedUrlName": "Stub"
       },
       {
-        "Name": "alvs-cds"
+        "Name": "alvs-cds",
+        "RoutedUrlName": "Stub",
+        "UnreturnedUrlName": "Stub"
+      },
+      {
+        "Name": "test",
+        "RoutedUrlName": "Stub",
+        "UnreturnedUrlName": "Stub"
+      }
+    ],
+    "NamedUrls": [
+      {
+        "Name": "Stub",
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/"
+      },
+      {
+        "Name": "TdmSimulator",
+        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/tdm"
       }
     ]
   }
