--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -30,33 +30,29 @@
     "Routes": [
       {
         "Name": "alvs-ipaffs",
-        "RoutedUrlName": "Stub",
-        "UnreturnedUrlName": "Stub"
+        "RoutedUrlName": "stub",
+        "UnreturnedUrlName": "stub"
       },
       {
         "Name": "cds",
-        "RoutedUrlName": "Stub",
-        "UnreturnedUrlName": "Stub"
+        "RoutedUrlName": "stub",
+        "UnreturnedUrlName": "stub"
       },
       {
         "Name": "alvs-cds",
-        "RoutedUrlName": "Stub",
-        "UnreturnedUrlName": "Stub"
+        "RoutedUrlName": "stub",
+        "UnreturnedUrlName": "stub"
       },
       {
         "Name": "test",
-        "RoutedUrlName": "Stub",
-        "UnreturnedUrlName": "Stub"
+        "RoutedUrlName": "stub",
+        "UnreturnedUrlName": "stub"
       }
     ],
     "NamedUrls": [
       {
-        "Name": "Stub",
+        "Name": "stub",
         "Url": "http://cdms-gateway-stub.localtest.me:3092/"
-      },
-      {
-        "Name": "TdmSimulator",
-        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/tdm"
       }
     ]
   }
