--- a/CdmsGateway/appsettings.Development.json
+++ b/CdmsGateway/appsettings.Development.json
@@ -33,28 +33,32 @@
     "AdditionalRoutes": [
       {
         "Name": "simulator-alvs-ipaffs",
-        "RoutedUrlName": "TdmSimulator",
-        "UnreturnedUrlName": "Stub"
+        "RoutedUrlName": "stub",
+        "UnreturnedUrlName": "stub"
       },
       {
         "Name": "simulator-cds",
-        "RoutedUrlName": "TdmSimulator",
-        "UnreturnedUrlName": "Stub"
+        "RoutedUrlName": "cds-simulator",
+        "UnreturnedUrlName": "stub"
       },
       {
         "Name": "simulator-alvs-cds",
-        "RoutedUrlName": "TdmSimulator",
-        "UnreturnedUrlName": "Stub"
+        "RoutedUrlName": "alvs-cds-simulator",
+        "UnreturnedUrlName": "stub"
       }
     ],
     "NamedUrls": [
       {
-        "Name": "Stub",
+        "Name": "stub",
         "Url": "http://cdms-gateway-stub.localtest.me:3092/"
       },
       {
-        "Name": "TdmSimulator",
-        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/tdm"
+        "Name": "cds-simulator",
+        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/cds"
+      },
+      {
+        "Name": "alvs-cds-simulator",
+        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/alvs-cds"
       }
     ]
   }
