--- a/CdmsGateway/appsettings.Development.json
+++ b/CdmsGateway/appsettings.Development.json
@@ -34,23 +34,27 @@
       {
         "Name": "simulator-alvs-ipaffs",
         "RoutedUrlName": "stub",
-        "UnreturnedUrlName": "stub"
+        "ForkedUrlName": "forked-stub"
       },
       {
         "Name": "simulator-cds",
         "RoutedUrlName": "cds-simulator",
-        "UnreturnedUrlName": "stub"
+        "ForkedUrlName": "forked-stub"
       },
       {
         "Name": "simulator-alvs-cds",
         "RoutedUrlName": "alvs-cds-simulator",
-        "UnreturnedUrlName": "stub"
+        "ForkedUrlName": "forked-stub"
       }
     ],
     "NamedUrls": [
       {
         "Name": "stub",
         "Url": "http://cdms-gateway-stub.localtest.me:3092/"
+      },
+      {
+        "Name": "forked-stub",
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/forked/"
       },
       {
         "Name": "cds-simulator",
