--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -31,28 +31,32 @@
       {
         "Name": "alvs-ipaffs",
         "RoutedUrlName": "stub",
-        "UnreturnedUrlName": "stub"
+        "ForkedUrlName": "forked-stub"
       },
       {
         "Name": "cds",
         "RoutedUrlName": "stub",
-        "UnreturnedUrlName": "stub"
+        "ForkedUrlName": "forked-stub"
       },
       {
         "Name": "alvs-cds",
         "RoutedUrlName": "stub",
-        "UnreturnedUrlName": "stub"
+        "ForkedUrlName": "forked-stub"
       },
       {
         "Name": "test",
         "RoutedUrlName": "stub",
-        "UnreturnedUrlName": "stub"
+        "ForkedUrlName": "forked-stub"
       }
     ],
     "NamedUrls": [
       {
         "Name": "stub",
         "Url": "http://cdms-gateway-stub.localtest.me:3092/"
+      },
+      {
+        "Name": "forked-stub",
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/forked/"
       }
     ]
   }
