Updated otel logging config

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:18889",
+  "OTEL_SERVICE_NAME": "cdms-gateway",
   "Mongo": {
     "DatabaseUri": "mongodb://set-automatically-when-deployed/admin?authSource=$external&authMechanism=MONGODB-AWS",
     "DatabaseName": "cdms-gateway"
