Added basic http url test endpoint

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -56,6 +56,18 @@
         "Name": "forked-stub",
         "Url": "http://cdms-gateway-stub.localtest.me:3092/forked/"
       }
+    ],
+    "HealthUrls": [
+      {
+        "Name": "stub-1",
+        "Method": "GET",
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/health"
+      },
+      {
+        "Name": "stub-2",
+        "Method": "POST",
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/test"
+      }
     ]
   }
 }
