Tidied health config

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -59,14 +59,9 @@
     ],
     "HealthUrls": [
       {
-        "Name": "stub-1",
+        "Name": "stub",
         "Method": "GET",
         "Url": "http://cdms-gateway-stub.localtest.me:3092/health"
-      },
-      {
-        "Name": "stub-2",
-        "Method": "POST",
-        "Url": "http://cdms-gateway-stub.localtest.me:3092/test"
       }
     ]
   }
