Temporarily added additional health urls

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -62,6 +62,21 @@
         "Name": "stub",
         "Method": "GET",
         "Url": "http://cdms-gateway-stub.localtest.me:3092/health"
+      },
+      {
+        "Name": "CDS DIT1 DNS",
+        "Method": "GET",
+        "Url": "https://cdcm-eis.cds.dit1.n.mes.corp.hmrc.gov.uk"
+      },
+      {
+        "Name": "CDS DIT1 IP HTTPS",
+        "Method": "GET",
+        "Url": "https://10.179.33.215"
+      },
+      {
+        "Name": "google",
+        "Method": "GET",
+        "Url": "https://google.com"
       }
     ]
   }
