Parallelized http and ip routing checks

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -69,7 +69,7 @@
         "Url": "https://cdcm-eis.cds.dit1.n.mes.corp.hmrc.gov.uk"
       },
       {
-        "Name": "CDS DIT1 IP HTTPS",
+        "Name": "CDS DIT1 IP",
         "Method": "GET",
         "Url": "https://10.179.33.215"
       },
