Changed default timeouts

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -69,9 +69,9 @@
         "Url": "https://cdcm-eis.cds.dit1.n.mes.corp.hmrc.gov.uk"
       },
       {
-        "Name": "CDS DIT1 IP",
+        "Name": "IPAFFS",
         "Method": "GET",
-        "Url": "https://10.179.33.215"
+        "Url": " https://importnotification-api-static-snd.azure.defra.cloud/soapsearch/vnet"
       },
       {
         "Name": "google",
