CDMS-129 refactoring configuration to remove duplication

--- a/CdmsGateway/appsettings.Development.json
+++ b/CdmsGateway/appsettings.Development.json
@@ -43,20 +43,19 @@
     ],
     "NamedUrls": [
       {
-        "Name": "stub",
         "Url": "http://cdms-gateway-stub.localtest.me:3092/"
       },
       {
-        "Name": "forked-stub",
         "Url": "http://cdms-gateway-stub.localtest.me:3092/forked/"
       },
       {
-        "Name": "cds-simulator",
         "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/cds"
       },
       {
-        "Name": "alvs-cds-simulator",
         "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/alvs-cds"
+      },
+      {
+        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/alvs-ipaffs"
       }
     ]
   }
