--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -1,6 +1,4 @@
 {
-  "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:18889",
-  "OTEL_SERVICE_NAME": "cdms-gateway",
   "AllowedHosts": "*",
   "Serilog": {
     "MinimumLevel": {
@@ -27,18 +25,18 @@
   "Routing": {
     "Routes": [
       {
-        "Name": "alvs-ipaffs",
-        "RoutedUrlName": "stub",
+        "Name": "simulator-alvs-ipaffs",
+        "RoutedUrlName": "alvs-ipaffs-simulator",
         "ForkedUrlName": "forked-stub"
       },
       {
-        "Name": "cds",
-        "RoutedUrlName": "stub",
+        "Name": "cds-simulator",
+        "RoutedUrlName": "cds-simulator",
         "ForkedUrlName": "forked-stub"
       },
       {
-        "Name": "alvs-cds",
-        "RoutedUrlName": "stub",
+        "Name": "simulator-alvs-cds",
+        "RoutedUrlName": "alvs-cds-simulator",
         "ForkedUrlName": "forked-stub"
       },
       {
@@ -49,19 +47,33 @@
     ],
     "NamedUrls": [
       {
-        "Name": "stub",
-        "Url": "http://cdms-gateway-stub.localtest.me:3092/"
+        "Name": "stub"
       },
       {
-        "Name": "forked-stub",
-        "Url": "http://cdms-gateway-stub.localtest.me:3092/forked/"
+        "Name": "forked-stub"
+      },
+      {
+        "Name": "cds-simulator"
+      },
+      {
+        "Name": "alvs-cds-simulator"
+      },
+      {
+        "Name": "alvs-ipaffs-simulator"
       }
     ],
     "HealthUrls": [
       {
         "Name": "stub",
-        "Method": "GET",
-        "Url": "http://cdms-gateway-stub.localtest.me:3092/health"
+        "Method": "GET"
+      },
+      {
+        "Name": "cds",
+        "Method": "GET"
+      },
+      {
+        "Name": "ipaffs",
+        "Method": "GET"
       }
     ]
   }
