CDMS-129 refactoring of configuration and allow health checks to be disabled

--- a/CdmsGateway/appsettings.Development.json
+++ b/CdmsGateway/appsettings.Development.json
@@ -24,21 +24,9 @@
     ]
   },
   "Routing": {
-    "AdditionalRoutes": [
+    "Routes": [
       {
-        "Name": "simulator-alvs-ipaffs",
-        "RoutedUrlName": "stub",
-        "ForkedUrlName": "forked-stub"
-      },
-      {
-        "Name": "simulator-cds",
-        "RoutedUrlName": "cds-simulator",
-        "ForkedUrlName": "forked-stub"
-      },
-      {
-        "Name": "simulator-alvs-cds",
-        "RoutedUrlName": "alvs-cds-simulator",
-        "ForkedUrlName": "forked-stub"
+        "RoutedUrlName": "stub"
       }
     ],
     "NamedUrls": [
