CDMS-129 adds simulator-cds endpoint back in

--- a/CdmsGateway/appsettings.Development.json
+++ b/CdmsGateway/appsettings.Development.json
@@ -24,20 +24,18 @@
     ]
   },
   "Routing": {
-    "Routes": [
-      {
-        "RoutedUrlName": "stub"
-      }
-    ],
     "NamedUrls": [
       {
         "Url": "http://cdms-gateway-stub.localtest.me:3092/"
       },
       {
-        "Url": "http://cdms-gateway-stub.localtest.me:3092/forked/"
+        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/cds"
       },
       {
         "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/cds"
+      },
+      {
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/forked/"
       },
       {
         "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/alvs-cds"
