--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -30,13 +30,23 @@
         "ForkedUrlName": "forked-stub"
       },
       {
-        "Name": "cds-simulator",
+        "Name": "simulator-alvs-cds",
+        "RoutedUrlName": "alvs-cds-simulator",
+        "ForkedUrlName": "forked-stub"
+      },
+      {
+        "Name": "simulator-cds",
         "RoutedUrlName": "cds-simulator",
         "ForkedUrlName": "forked-stub"
       },
       {
-        "Name": "simulator-alvs-cds",
-        "RoutedUrlName": "alvs-cds-simulator",
+        "Name": "alvs-ipaffs",
+        "RoutedUrlName": "stub",
+        "ForkedUrlName": "forked-stub"
+      },
+      {
+        "Name": "cds",
+        "RoutedUrlName": "stub",
         "ForkedUrlName": "forked-stub"
       },
       {
