Added nslookup to route checking

--- a/CdmsGateway/appsettings.Development.json
+++ b/CdmsGateway/appsettings.Development.json
@@ -43,6 +43,32 @@
       {
         "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/alvs-ipaffs"
       }
+    ],
+    "HealthUrls": [
+      {
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/health"
+      },
+      {
+        "Url": "https://cdcm-eis.cds.dit1.n.mes.corp.hmrc.gov.uk"
+      },
+      {
+        "Url": "https://imports-proxy.azurewebsites.net/soapsearch/test"
+      },
+      {
+        "Name": "ipaffs static-snet",
+        "Method": "GET",
+        "Url": "https://importnotification-api-static-snd.azure.defra.cloud/soapsearch/vnet"
+      },
+      {
+        "Name": "ipaffs octopus",
+        "Method": "GET",
+        "Url": "https://importnotification-api-tst.azure.defra.cloud/soapsearch/tst"
+      },
+      {
+        "Name": "google",
+        "Method": "GET",
+        "Url": "https://www.google.com"
+      }
     ]
   }
 }
