Fixed up some broken config

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:18889",
+  "OTEL_SERVICE_NAME": "cdms-gateway",
   "AllowedHosts": "*",
   "Serilog": {
     "MinimumLevel": {
@@ -25,21 +27,6 @@
   "Routing": {
     "Routes": [
       {
-        "Name": "simulator-alvs-ipaffs",
-        "RoutedUrlName": "alvs-ipaffs-simulator",
-        "ForkedUrlName": "forked-stub"
-      },
-      {
-        "Name": "simulator-alvs-cds",
-        "RoutedUrlName": "alvs-cds-simulator",
-        "ForkedUrlName": "forked-stub"
-      },
-      {
-        "Name": "simulator-cds",
-        "RoutedUrlName": "cds-simulator",
-        "ForkedUrlName": "forked-stub"
-      },
-      {
         "Name": "alvs-ipaffs",
         "RoutedUrlName": "stub",
         "ForkedUrlName": "forked-stub"
@@ -52,6 +39,21 @@
       {
         "Name": "test",
         "RoutedUrlName": "stub",
+        "ForkedUrlName": "forked-stub"
+      },
+      {
+        "Name": "simulator-alvs-ipaffs",
+        "RoutedUrlName": "alvs-ipaffs-simulator",
+        "ForkedUrlName": "forked-stub"
+      },
+      {
+        "Name": "simulator-alvs-cds",
+        "RoutedUrlName": "alvs-cds-simulator",
+        "ForkedUrlName": "forked-stub"
+      },
+      {
+        "Name": "simulator-cds",
+        "RoutedUrlName": "cds-simulator",
         "ForkedUrlName": "forked-stub"
       }
     ],
@@ -82,8 +84,8 @@
         "Method": "GET"
       },
       {
-        "Name": "ipaffs",
-        "Method": "GET"
+        "Name": "IPAFFS Static-Vnet",
+        "Method": "POST"
       }
     ]
   }
