--- a/CdmsGateway/appsettings.Development.json
+++ b/CdmsGateway/appsettings.Development.json
@@ -29,13 +29,10 @@
         "Url": "http://cdms-gateway-stub.localtest.me:3092/"
       },
       {
-        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/cds"
-      },
-      {
-        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/cds"
-      },
-      {
         "Url": "http://cdms-gateway-stub.localtest.me:3092/forked/"
+      },
+      {
+        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/cds"
       },
       {
         "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/alvs-cds"
@@ -52,17 +49,17 @@
         "Url": "https://cdcm-eis.cds.dit1.n.mes.corp.hmrc.gov.uk"
       },
       {
-        "Url": "https://imports-proxy.azurewebsites.net/soapsearch/test"
-      },
-      {
-        "Name": "ipaffs static-snet",
-        "Method": "GET",
         "Url": "https://importnotification-api-static-snd.azure.defra.cloud/soapsearch/vnet"
       },
       {
-        "Name": "ipaffs octopus",
-        "Method": "GET",
+        "Name": "IPAFFS Octopus",
+        "Method": "POST",
         "Url": "https://importnotification-api-tst.azure.defra.cloud/soapsearch/tst"
+      },
+      {
+        "Name": "IPAFFS Static-Test",
+        "Method": "POST",
+        "Url": "https://imports-proxy.azurewebsites.net/soapsearch/test"
       },
       {
         "Name": "google",
