Further changes to config

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -59,19 +59,24 @@
     ],
     "NamedUrls": [
       {
-        "Name": "stub"
+        "Name": "stub",
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/"
       },
       {
-        "Name": "forked-stub"
+        "Name": "forked-stub",
+        "Url": "http://cdms-gateway-stub.localtest.me:3092/forked/"
       },
       {
-        "Name": "cds-simulator"
+        "Name": "cds-simulator",
+        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/cds"
       },
       {
-        "Name": "alvs-cds-simulator"
+        "Name": "alvs-cds-simulator",
+        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/alvs-cds"
       },
       {
-        "Name": "alvs-ipaffs-simulator"
+        "Name": "alvs-ipaffs-simulator",
+        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/alvs-ipaffs"
       }
     ],
     "HealthUrls": [
