Enabled new telemetry settings

--- a/CdmsGateway/appsettings.Development.json
+++ b/CdmsGateway/appsettings.Development.json
@@ -1,4 +1,6 @@
 {
+  "OTEL_EXPORTER_OTLP_ENDPOINT": "http://grafana.localtest.me:8085",
+  "AWS_EMF_ENABLED": false,
   "DetailedErrors": true,
   "AllowedHosts": "*",
   "Serilog": {
