--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:18889",
-  "OTEL_SERVICE_NAME": "cdms-gateway",
+  "OTEL_EXPORTER_OTLP_PROTOCOL": "http/protobuf",
+  "OTEL_SERVICE_NAME": "Cdms-Gateway",
+  "AWS_EMF_NAMESPACE": "CdmsGateway",
   "AllowedHosts": "*",
   "Serilog": {
     "MinimumLevel": {
