Initial changes to config

--- a/CdmsGateway/appsettings.json
+++ b/CdmsGateway/appsettings.json
@@ -26,73 +26,71 @@
     ]
   },
   "Routing": {
-    "Routes": [
-      {
-        "Name": "alvs-ipaffs",
-        "RoutedUrlName": "stub",
-        "ForkedUrlName": "forked-stub"
+    "NamedRoutes": {
+      "cds": {
+        "LegacyUrlName": "stub",
+        "BtmsUrlName": "forked-stub",
+        "RouteTo": "Legacy"
       },
-      {
-        "Name": "cds",
-        "RoutedUrlName": "stub",
-        "ForkedUrlName": "forked-stub"
+      "alvs-cds": {
+        "LegacyUrlName": "stub",
+        "BtmsUrlName": "forked-stub",
+        "RouteTo": "Legacy"
       },
-      {
-        "Name": "test",
-        "RoutedUrlName": "stub",
-        "ForkedUrlName": "forked-stub"
+      "alvs-ipaffs": {
+        "LegacyUrlName": "stub",
+        "BtmsUrlName": "forked-stub",
+        "RouteTo": "Legacy"
       },
-      {
-        "Name": "simulator-alvs-ipaffs",
-        "RoutedUrlName": "alvs-ipaffs-simulator",
-        "ForkedUrlName": "forked-stub"
+      "test": {
+        "LegacyUrlName": "stub",
+        "BtmsUrlName": "forked-stub",
+        "RouteTo": "Legacy"
       },
-      {
-        "Name": "simulator-alvs-cds",
-        "RoutedUrlName": "alvs-cds-simulator",
-        "ForkedUrlName": "forked-stub"
+      "simulator-cds": {
+        "LegacyUrlName": "stub",
+        "BtmsUrlName": "cds-simulator",
+        "RouteTo": "Legacy"
       },
-      {
-        "Name": "simulator-cds",
-        "RoutedUrlName": "cds-simulator",
-        "ForkedUrlName": "forked-stub"
+      "simulator-alvs-cds": {
+        "LegacyUrlName": "stub",
+        "BtmsUrlName": "alvs-cds-simulator",
+        "RouteTo": "Legacy"
+      },
+      "simulator-alvs-ipaffs": {
+        "LegacyUrlName": "stub",
+        "BtmsUrlName": "alvs-ipaffs-simulator",
+        "RouteTo": "Legacy"
       }
-    ],
-    "NamedUrls": [
-      {
-        "Name": "stub",
-        "Url": "http://cdms-gateway-stub.localtest.me:3092/"
-      },
-      {
-        "Name": "forked-stub",
-        "Url": "http://cdms-gateway-stub.localtest.me:3092/forked/"
-      },
-      {
-        "Name": "cds-simulator",
-        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/cds"
-      },
-      {
-        "Name": "alvs-cds-simulator",
-        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/alvs-cds"
-      },
-      {
-        "Name": "alvs-ipaffs-simulator",
-        "Url": "http://tdm-prototype-backend.localtest.me:3080/simulator/alvs-ipaffs"
-      }
-    ],
-    "HealthUrls": [
-      {
-        "Name": "stub",
-        "Method": "GET"
-      },
-      {
-        "Name": "cds",
-        "Method": "GET"
-      },
-      {
-        "Name": "IPAFFS Static-Vnet",
-        "Method": "POST"
-      }
-    ]
+    },
+    "NamedUrls": {
+      "stub": "http://cdms-gateway-stub.localtest.me:3092/",
+      "forked-stub": "http://cdms-gateway-stub.localtest.me:3092/forked",
+      "cds-simulator": "http://cdms-gateway-stub.localtest.me:3092/simulator/cds",
+      "alvs-cds-simulator": "http://cdms-gateway-stub.localtest.me:3092/simulator/alvs-cds",
+      "alvs-ipaffs-simulator": "http://cdms-gateway-stub.localtest.me:3092/simulator/alvs-ipaffs"
+    }
+  },
+  "HealthUrls": {
+    "stub": {
+      "Method": "GET",
+      "Url": "http://cdms-gateway-stub.localtest.me:3092/health"
+    },
+    "cds": {
+      "Method": "GET",
+      "Url": "https://cdcm-eis.cds.dit1.n.mes.corp.hmrc.gov.uk"
+    },
+    "IPAFFS Static-Vnet": {
+      "Method": "POST",
+      "Url": "https://importnotification-api-static-snd.azure.defra.cloud/soapsearch/vnet"
+    },
+    "IPAFFS Static-Test": {
+      "Method": "POST",
+      "Url": "https://imports-proxy.azurewebsites.net/soapsearch/test"
+    },
+    "IPAFFS Octopus": {
+      "Method": "POST",
+      "Url": "https://importnotification-api-tst.azure.defra.cloud/soapsearch/tst"
+    }
   }
 }
