--- a/CdmsGateway/appsettings.Development.json
+++ b/CdmsGateway/appsettings.Development.json
@@ -26,31 +26,11 @@
     ]
   },
   "Routing": {
-    "HealthUrls": [
-      {
-        "Url": "http://cdms-gateway-stub.localtest.me:3092/health"
-      },
-      {
-        "Url": "https://cdcm-eis.cds.dit1.n.mes.corp.hmrc.gov.uk"
-      },
-      {
-        "Url": "https://importnotification-api-static-snd.azure.defra.cloud/soapsearch/vnet"
-      },
-      {
-        "Name": "IPAFFS Octopus",
-        "Method": "POST",
-        "Url": "https://importnotification-api-tst.azure.defra.cloud/soapsearch/tst"
-      },
-      {
-        "Name": "IPAFFS Static-Test",
-        "Method": "POST",
-        "Url": "https://imports-proxy.azurewebsites.net/soapsearch/test"
-      },
-      {
-        "Name": "google",
+    "HealthUrls": {
+      "google": {
         "Method": "GET",
         "Url": "https://www.google.com"
       }
-    ]
+    }
   }
 }
